# Octovalve

./: .gitignore  AGENTS.md  Cargo.toml  NOTICE  README.md  README.zh-CN.md  config.toml  rust-toolchain.toml
config/: local-proxy-config.toml  tunnel-daemon.toml
console-ui/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
console-ui/src/: App.vue  api.ts  components.d.ts  main.ts  settings.ts  shortcuts.ts  style.css  tauriWindow.ts  theme.ts  types.ts
console-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
console-ui/src-tauri/assets/runtime/: AGENTS.md
console-ui/src-tauri/examples/: test_acp.rs  test_openai.rs
console-ui/src-tauri/icons/: icon.icns
console-ui/src-tauri/resources/: local-proxy-config.toml  local-proxy-config.toml.example
console-ui/src-tauri/src/: acp_client.rs  acp_types.rs  lib.rs  main.rs  mcp_client.rs  mcp_proxy.rs  openai_client.rs  paths.rs  state.rs
console-ui/src-tauri/src/app/: mod.rs  setup.rs  window_events.rs
console-ui/src-tauri/src/clients/: acp_client.rs  acp_types.rs  mcp_client.rs  mod.rs  openai_client.rs
console-ui/src-tauri/src/clients/acp_client/: client.rs  error.rs  mod.rs
console-ui/src-tauri/src/clients/openai_client/: client.rs  mod.rs  types.rs
console-ui/src-tauri/src/commands/: acp.rs  ai.rs  chat.rs  config.rs  console.rs  mcp.rs  mod.rs  openai.rs  opener.rs  profiles.rs  terminal.rs
console-ui/src-tauri/src/services/: acp.rs  ai_risk.rs  app_error.rs  config.rs  console_http.rs  console_sidecar.rs  console_ws.rs  dev_sidecars.rs  http_utils.rs  logging.rs  mcp.rs  mcp_config.rs  mod.rs  openai.rs  profiles.rs  startup_check.rs  terminal.rs
console-ui/src-tauri/src/services/profiles/: actions.rs  index.rs  lifecycle.rs  mod.rs  paths.rs  proxy_config.rs
console-ui/src-tauri/src/types/: ai.rs  config.rs  console.rs  mod.rs  profiles.rs  terminal.rs
console-ui/src/app/: App.vue  ConsoleView.vue  appContext.ts
console-ui/src/chat/: index.ts
console-ui/src/chat/components/: ChatDrawer.vue  ChatHistoryModal.vue  ChatInput.vue  ChatMessageRow.vue  ChatPanel.vue  ChatView.vue  ReasoningBlock.vue  ToolCallCard.vue  index.ts
console-ui/src/chat/composables/: index.ts  useChatService.ts  useChatState.ts  useSmoothStream.ts  useStickToBottom.ts
console-ui/src/chat/services/: acpService.ts  openaiService.ts
console-ui/src/chat/store/: chatStore.ts
console-ui/src/chat/types/: index.ts
console-ui/src/components/: ConsoleChatPane.vue  ConsoleLeftPane.vue  MonacoEditor.vue  SettingsModal.vue  Sidebar.vue  TargetView.vue  TerminalPanel.vue  ToastNotification.vue
console-ui/src/components/settings/: AiInspectionSettings.vue  ConfigCenterSettings.vue  GeneralSettings.vue  ShortcutsSettings.vue  index.ts
console-ui/src/composables/: useAiRiskQueue.ts  useTerminalState.ts  useThemeMode.ts
console-ui/src/domain/chat/: devtools.ts  index.ts
console-ui/src/domain/config/: toml.ts
console-ui/src/i18n/: index.ts  messages.ts
console-ui/src/services/: api.ts  errors.ts  opener.ts  settings.ts  tauriWindow.ts  uiScale.ts
console-ui/src/shared/: mcpTools.ts  naiveTheme.ts  platform.ts  shortcuts.ts  terminalTheme.ts  theme.ts  types.ts
console-ui/src/styles/: style.css
console-ui/src/ui/: layout.ts
console-ui/tests/: acpTimeline.test.ts  chatMessageRow.timeline.test.ts  chatPersistence.test.ts  chatPipeline.test.ts  chatProviders.test.ts  mcpTools.test.ts
crates/acp-codex/: Cargo.toml
crates/acp-codex/src/: app_server.rs  cli.rs  handlers.rs  lib.rs  logging.rs  main.rs  protocol.rs  server.rs  sessions.rs  state.rs  utils.rs  writer.rs
crates/acp-types/: Cargo.toml
crates/acp-types/src/: lib.rs
crates/console/: Cargo.toml
crates/console/src/: bootstrap.rs  cli.rs  config.rs  control.rs  events.rs  main.rs  runtime.rs  shell_utils.rs  state.rs  terminal.rs  tunnel.rs  tunnel_client.rs  uploads.rs
crates/console/src/bootstrap/: mod.rs  platform.rs  remote.rs  ssh.rs  utils.rs
crates/console/src/local_exec/: audit.rs  events.rs  executor.rs  history.rs  mod.rs  output.rs  policy.rs  process.rs  server.rs  service.rs  snapshots.rs  stream.rs  test_utils.rs
crates/console/src/runtime/: control.rs  mod.rs  session.rs  status.rs  worker.rs
crates/console/src/state/: config.rs  console.rs  mod.rs  model.rs
crates/local-proxy/: Cargo.toml
crates/local-proxy/src/: cli.rs  config.rs  main.rs  mcp.rs  state.rs  tunnel.rs  tunnel_client.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: config.rs  control.rs  framing.rs  lib.rs
crates/remote-broker/: Cargo.toml
crates/remote-broker/src/: activity.rs  app.rs  audit.rs  cli.rs  config.rs  executor.rs  format.rs  main.rs  server.rs  terminal.rs  ui.rs  whitelist.rs
crates/remote-broker/src/layers/: mod.rs
crates/remote-broker/src/layers/execution/: executor.rs  mod.rs  output.rs
crates/remote-broker/src/layers/execution/executor/: mod.rs  output.rs  pipeline.rs  process.rs  shell.rs  stream.rs
crates/remote-broker/src/layers/policy/: config.rs  mod.rs  summary.rs  whitelist.rs
crates/remote-broker/src/layers/service/: approvals.rs  audit.rs  control.rs  events.rs  history.rs  logging.rs  mod.rs  server.rs
crates/remote-broker/src/layers/service/approvals/: handlers.rs  mod.rs  snapshots.rs  state.rs
crates/remote-broker/src/layers/ui/: app.rs  format.rs  input.rs  mod.rs  render.rs  terminal.rs  text.rs  theme.rs
crates/remote-broker/src/shared/: dto.rs  mod.rs  snapshot.rs
crates/system-utils/: Cargo.toml
crates/system-utils/src/: lib.rs  path.rs  process.rs  ssh.rs
crates/tunnel-daemon/: Cargo.toml
crates/tunnel-daemon/src/: cli.rs  config.rs  main.rs  ssh.rs  state.rs
crates/tunnel-manager/: Cargo.toml
crates/tunnel-manager/src/: lib.rs  manager.rs  ssh.rs
crates/tunnel-protocol/: Cargo.toml
crates/tunnel-protocol/src/: lib.rs
scripts/: build_release.sh  dev_sync_tauri_sidecars.sh  dev_tauri_full.sh  dev_watch_sidecars.sh  find_dups.py  prepare_tauri_sidecars.sh  sync_version.py
(+41 files in other folders)
