[workspace]
resolver = "2"
members = [
  "crates/acp-types",
  "crates/acp-codex",
  "crates/console",
  "crates/protocol",
  "crates/local-proxy",
  "crates/system-utils",
]

[workspace.package]
edition = "2021"
version = "0.1.4"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
futures-util = { version = "0.3", features = ["sink"] }
ratatui = "0.29"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
humantime = "2.1"
libc = "0.2"
md5 = "0.7"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "process", "io-util", "time", "sync", "signal", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.8", features = ["v4"] }
