[package]
name = "octovalve-console"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "octovalve-console"
license = "MIT OR Apache-2.0"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "=2.5.3", features = [] }

[dependencies]
futures-util = "0.3"
humantime = "2.1"
libc = "0.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
rmcp = { version = "=0.8.0", features = ["client", "transport-child-process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1"
tauri = { version = "=2.9.5", features = ["macos-private-api", "devtools"] }
tauri-plugin-shell = "=2.3.3"
toml = "0.8"
toml_edit = "0.22"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time", "process"] }
tokio-tungstenite = "0.23"
urlencoding = "2.1"
uuid = { version = "1.8", features = ["v4"] }
protocol = { path = "../../crates/protocol" }
acp-codex = { path = "../../crates/acp-codex" }
acp-types = { path = "../../crates/acp-types" }

[features]
custom-protocol = ["tauri/custom-protocol"]
dev-tools = []

[[bin]]
name = "test_acp"
path = "src/bin/test_acp.rs"
required-features = ["dev-tools"]

[[bin]]
name = "test_openai"
path = "src/bin/test_openai.rs"
required-features = ["dev-tools"]

[workspace]
