[package]
name = "acp-codex"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-std"] }
uuid = { workspace = true }

codex-app-server-protocol = { git = "https://github.com/openai/codex.git", package = "codex-app-server-protocol", rev = "565488c15b8969694ec52cda3d6fcc99655a972f" }
codex-protocol = { git = "https://github.com/openai/codex.git", package = "codex-protocol", rev = "565488c15b8969694ec52cda3d6fcc99655a972f" }

dirs = "5.0"
