[package]
name = "console"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.7", features = ["json", "ws"] }
base64 = "0.22"
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
humantime.workspace = true
libc.workspace = true
md5.workspace = true
portable-pty = "0.8"
protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tunnel-manager = { path = "../tunnel-manager" }
tunnel-protocol = { path = "../tunnel-protocol" }
