[package]
name = "console"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "octovalve-console"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = { version = "0.7", features = ["json", "ws"] }
base64 = "0.22"
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
humantime.workspace = true
libc.workspace = true
md5.workspace = true
portable-pty = "0.8"
protocol = { path = "../protocol" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
system-utils = { path = "../system-utils" }
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }
