[package]
name = "octovalve-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
humantime.workspace = true
libc.workspace = true
protocol = { path = "../protocol" }
rust-mcp-sdk = { version = "0.7.4", default-features = false, features = ["server", "macros", "stdio", "2025_06_18"] }
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
toml.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tunnel-manager = { path = "../tunnel-manager" }
tunnel-protocol = { path = "../tunnel-protocol" }
uuid.workspace = true
