[package]
name = "octovalve-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
humantime.workspace = true
libc.workspace = true
protocol = { path = "../protocol" }
rmcp = { version = "=0.8.0", features = ["server", "transport-io"] }
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
system-utils = { path = "../system-utils" }
toml.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
